--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     druid:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://localhost:3306/emos?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+      url: jdbc:mysql://175.178.13.217:3306/emos?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
       username: root
       password: Zz88921288
       initial-size: 8
@@ -26,7 +26,7 @@ spring:
 
   redis:
     database: 0
-    host: localhost
+    host: 175.178.13.217
     port: 6379
     password: Zz88921288
     jedis:
@@ -67,6 +67,9 @@ emos:
     expire:  5
     #令牌缓存时间（天数）
     cache-expire: 10
+  face:
+    createFaceModelUrl: http://175.178.13.217:3000/create_face_model
+    checkinUrl: http://175.178.13.217:3000/checkin
 
 wx:
   app-id: wxfdfcef0521a64f52
